--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,16 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Homepage{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block body %}
-    <div class="min-h-screen bg-gray-100 flex items-center justify-center">
-        <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-lg">
-            <h1 class="text-3xl font-bold text-center text-gray-800 mb-4">
-                Bienvenue sur la page d'accueil !
-            </h1>
-            <p class="text-gray-600 text-center">
-                Ce contenu est généré par le contrôleur : {{ controller_name }}
-            </p>
-        </div>
-    </div>
+<div class="container mx-auto mt-10 text-center">
+    <h1 class="text-4xl font-bold">Bienvenue sur Profilau.top</h1>
+    <p class="mt-4 text-lg text-gray-600">Simplifiez et optimisez votre recherche d'emploi avec notre application</p>
+    <a href="{{ path('app_register') }}" class="inline-block px-6 py-3 mt-6 text-white bg-blue-500 rounded-lg">Commencer maintenant</a>
+</div>
 {% endblock %}
